--- a/less/styles.less
+++ b/less/styles.less
@@ -22,7 +22,6 @@ html {
     width: 100%;
     height: 100%;
     font-family: sgc-font;
-    background-image: url(../assets/images/stargates.png);
     background-color: black;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -1431,5 +1430,13 @@ Utils
     }
     36% {
         transform: scale(0);
+    }
+}
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
     }
 }
